doku/tests/compiletest/trait/field_not_impl_document.rs
use doku::Document;

#[derive(Document)]
struct Foo {
  bar: Bar,
}

struct Bar;

fn main() {
    println!("{}", doku::to_json::<Foo>());
}